<?xml version="1.0"?>
<package format="3">
  <name>vtol_msn_takeoff_landing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nano_exp@todo.todo">nano_exp</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>Eigen3</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>eigen_conversions</depend> -->
  <depend>apriltag_ros2</depend>
  <depend>apriltag_ros2_interfaces</depend>
  <!--depend>nlink_parser_ros2 ??? </depend-->


  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
